# howoldami

./: Cargo.toml  README.md  build.sh
images/: arch.avif  opensuse.avif
src/: formatter.rs  main.rs  os_colors.rs
